--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "open-encrypto-object",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Node.js module for recursively encrypting and decrypting primitive values within JSON objects and arrays using AES-256-GCM, requiring environment variables for keys.",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brucePedroGomes/open-encrypto-object"
+  },
   "scripts": {
     "build": "mkdir -p dist && cp src/index.js dist/index.js",
     "test": "jest"
